--- a/examples/examples/templates/index.html
+++ b/examples/examples/templates/index.html
@@ -5,7 +5,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js"></script>
     <script type="text/javascript">//<![CDATA[
     $(function () {
-        var s = new WebSocket('ws://localhost:8000/echo');
+        var s = new WebSocket('ws://127.0.0.1:8000/echo');
         s.onopen = function () {
             console.log('WebSocket open');
         };
