--- a/examples/examples/templates/index.html
+++ b/examples/examples/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>django-websocket</title>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js"></script>
+    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script type="text/javascript">//<![CDATA[
     $(function () {
         var s = new WebSocket('ws://127.0.0.1:8000/echo');
